# employee-time-tracking

./: .dockerignore  .gitignore  Dockerfile  README.md  dummy_data.py  main.py  pyproject.toml
src/: __init__.py  config.py  load_app.py
src/crud/: employee.py  shift.py  validation.py
src/database/: __init__.py  db_settings.py
src/database/db/: development.db
src/database/models/: employee.py  shift.py
src/routes/: base.py  employee.py  shift.py
src/schemas/: employee.py  shift.py
tests/: conftest.py  test_employees.py  test_shifts.py
